# eureka

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY_TO_RAILWAY.md  DEPLOY_TO_SPACES.md  Dockerfile  README.md  app.py  pyproject.toml  pytest.ini  railpack.json  railway.json  requirements-dev.txt  requirements.txt  run_ui.py
.streamlit/: config.toml  secrets.toml.example
docs/: GETTING_STARTED.md  ROADMAP.md  ai.md  api.md  architecture.md  deployment.md  developer-guide.md  extending.md  validation.md
packaging/: README.md  build_windows.bat  xlsform_architect_cli.spec  xlsform_studio_cli.spec
xlsform_architect/: __init__.py  models.py
xlsform_architect/ai/: __init__.py  choice_ordering.py  client.py  completeness.py  config.py  constraint_reviewer.py  coverage.py  domain_constraints.py  enumerator_notes.py  finding_explainer.py  grouping.py  indicators.py  naming.py  narrative.py  pipeline.py  quality_reviewer.py  rewording.py  skip_logic.py  suggestions.py  translator.py  type_classifier.py
xlsform_architect/analysis/: __init__.py  diff.py  duration.py  quality_score.py
xlsform_architect/app/: __init__.py  artifacts.py  config.py  logic_flow.py  main.py  ui.py  workflow.py
xlsform_architect/engine/: calculation_engine.py  choice_normalizer.py  constraint_engine.py  knowledge_base.py  logic_engine.py  question_classifier.py  rule_engine.py  variable_generator.py
xlsform_architect/examples/: household_design.csv  imam_otp.json  mms_anc.txt  screening.docx
xlsform_architect/knowledge/: dhis2_dictionary.yaml  imam_rules.yaml  mms_rules.yaml  nutrition_rules.yaml  platforms.yaml  xlsform_rules.yaml
xlsform_architect/parsers/: __init__.py  docx_parser.py  excel_parser.py  factory.py  pdf_parser.py  questionnaire_parser.py
xlsform_architect/tests/: __init__.py  test_advanced_features.py  test_ai.py  test_ai_features.py  test_analysis.py  test_bugfixes.py  test_calculation.py  test_classifier.py  test_confidence_upgrades.py  test_deep_validation.py  test_docx_parser.py  test_exporter.py  test_implementation_package.py  test_logic_constraint.py  test_logic_flow.py  test_parsers.py  test_platforms.py  test_tier2.py  test_tier3.py  test_validation.py  test_variable_generator.py  test_workflow.py
xlsform_architect/validation/: __init__.py  ai_validators.py  consistency_validator.py  expression_validator.py  logic_validator.py  platform_validator.py  pyxform_validator.py  readiness_validator.py  report_generator.py  structure_validator.py  validator.py  xlsform_validator.py
xlsform_architect/xlsform/: __init__.py  choices_builder.py  exporter.py  settings_builder.py  survey_builder.py
xlsform_studio/: __init__.py  logging_config.py  models.py
xlsform_studio/ai/: __init__.py  choice_ordering.py  client.py  completeness.py  config.py  constraint_reviewer.py  coverage.py  document_writer.py  domain_constraints.py  enumerator_notes.py  finding_explainer.py  form_author.py  grouping.py  indicators.py  naming.py  narrative.py  pipeline.py  prompt_safety.py  quality_reviewer.py  rewording.py  skip_logic.py  suggestions.py  translator.py  type_classifier.py
xlsform_studio/analysis/: __init__.py  design_intelligence.py  diff.py  duration.py  quality_score.py
xlsform_studio/app/: __init__.py  artifacts.py  (+10 more)
(+84 files in other folders)
